--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -60,37 +60,11 @@
     box-shadow: 0 -1px .5rem rgba(#000000, .3);
     border: 2px solid rgba($color-blue-sapphire, .4);
     padding: 3rem 7% 1.5rem;
-    width: 90vw;
+    width: 80vw;
     max-width: 50rem;
+    // min-width: 25rem;
 
     
-    
-    
-    
-
-
-    &__title {
-
-        color: $color-platinium;
-        font-family: $font-tertiary;
-        font-weight: 400;
-        font-size: $font-big;
-        text-align: center;
-        text-transform: uppercase;
-        margin-bottom: 3rem;
-        position: relative;
-
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 15%;
-            width: 70%;
-            height: 1.5px;
-            background: $color-platinium;
-            transform: scaleX(.6);
-        }
-    }
 
     &__group {
         margin: .5rem 0;
@@ -119,7 +93,7 @@
         border-bottom: 3px solid transparent;
 
         &::placeholder {
-            color: rgba($color-medium-turquoise, .5);
+            color: rgba($color-medium-turquoise, .75);
 
         }
 
@@ -164,16 +138,18 @@
     &__btn:active{
         padding: 1rem 2rem;
         background-color: rgba($color-white, .2);
-        border: none;
+        // border: none;
         cursor: pointer;
         background-color: transparent;
-        border: 2px solid rgba($color-celeste, .2);
+        border: 2px solid rgba($color-celeste, .4);
         transition: all .3s;
         color: $color-platinium;
+        font-family: $font-secondary;
+        letter-spacing: 1px;
     
         &:hover {
-            background-color: rgba($color-celeste, .2);
-            border: 2px solid rgba($color-celeste, .6);
+            background-color: rgba($color-celeste, .4);
+            border: 2px solid rgba($color-celeste, .8);
             transform: scale(1.1);
         }
     
@@ -190,12 +166,18 @@
 
     background-color: $color-indigo-dye-dark;
     width: 100%;
-    padding: 2%;
+    padding: 2% 5%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
     &__icon-box {
+        width: 50%;
+        min-width: 25rem;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-evenly;
+        // background: red;
 
         &--link {
             color: transparent;
@@ -213,15 +195,23 @@
                 fill: $color-platinium;
                 transform: translate(3px, -2px) scale(1.2);
             }
+            @media only screen and (max-width: $bp-small) {
+                height: 3rem;
+                width: 3rem;
+            
+            }
         }
 
     }
 
     &__copyright {
-        font-size: 1.5rem;
+        font-size: $font-med;
         font-weight: 100;
         text-transform: capitalize;
         text-align: center;
         color: $color-platinium;
+        @media only screen and (max-width: $bp-small) {
+            font-size: $font-small;
+        }
     }
 }
