--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -86,7 +86,7 @@
         // object-fit: cover;
         // object-position: right center;
         background-size: cover;
-        background-position: center;
+        background-position: center right;
         // border-radius: 5px 5px 0 0;//same border radius than SIDE
         background-blend-mode: screen;
 
