--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -26,45 +26,50 @@ body {
 .main__container {
   display: grid;
   grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, max-content) [col-end]) [center-end] 1fr [full-end];
-  grid-template-rows: 10vh 90vh repeat(4, minmax(auto, max-content));
+  grid-template-rows: 10vh 90vh repeat(4, minmax(min-content, max-content));
   position: relative; }
 
 .hex-shape {
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); }
 
 .section__title {
-  color: rgba(236, 236, 235, 0.8);
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  font-size: 2.2rem;
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 3rem;
-  position: relative; }
+  display: none; }
+  @media only screen and (max-width: 50em) {
+    .section__title {
+      display: inline-flex;
+      left: 50%;
+      transform: translateX(-50%);
+      color: rgba(236, 236, 235, 0.8);
+      font-family: "Montserrat", sans-serif;
+      font-weight: 600;
+      font-size: 2.2rem;
+      text-align: center;
+      text-transform: uppercase;
+      margin-bottom: 3rem;
+      position: relative; } }
   .section__title::after {
     content: "";
     position: absolute;
     bottom: 0;
-    left: 22.5%;
-    width: 55%;
+    left: -5%;
+    width: 110%;
     height: 1.5px;
-    background: rgba(236, 236, 235, 0.3);
-    transform: scaleX(0.6); }
+    background: rgba(236, 236, 235, 0.3); }
 
 .title-color--indigo {
-  color: rgba(16, 63, 86, 0.7); }
+  color: rgba(16, 63, 86, 0.8); }
   .title-color--indigo::after {
-    background: rgba(16, 63, 86, 0.3); }
+    background: rgba(16, 63, 86, 0.4); }
 
 .title-color--tangerine {
-  color: rgba(245, 139, 0, 0.7); }
+  color: rgba(245, 139, 0, 0.8); }
   .title-color--tangerine::after {
-    background: rgba(245, 139, 0, 0.3); }
+    background: rgba(245, 139, 0, 0.4); }
 
 .title-color--salsa {
-  color: rgba(251, 54, 64, 0.7); }
+  color: rgba(251, 54, 64, 0.8); }
   .title-color--salsa::after {
-    background: rgba(251, 54, 64, 0.3); }
+    background: rgba(251, 54, 64, 0.4); }
 
 .btn {
   position: absolute;
@@ -109,8 +114,8 @@ body {
 
 .about-box {
   display: grid;
-  grid-template-rows: repeat(3, minmax(8.5rem, 15vw));
-  grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(8.5rem, 15vw)) minmax(1rem, 1fr);
+  grid-template-rows: repeat(3, minmax(9.5rem, 15vw));
+  grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(9.5rem, 15vw)) minmax(1rem, 1fr);
   gap: 4vw;
   justify-content: center;
   align-items: center; }
@@ -146,7 +151,7 @@ body {
       font-weight: 400;
       letter-spacing: 0;
       line-height: 1;
-      font-size: 1rem; }
+      font-size: 1.3rem; }
       @media only screen and (min-width: 37.5em) {
         .about-box__item span {
           font-size: 1.3rem; } }
@@ -308,8 +313,8 @@ body {
   flex-direction: column;
   align-items: center; }
   .social__icon-box {
-    width: 50%;
-    min-width: 25rem;
+    width: 30%;
+    min-width: 27rem;
     display: flex;
     justify-content: space-evenly; }
     .social__icon-box--link {
@@ -362,6 +367,7 @@ noscript {
   transform: translate(-50%, -50%);
   z-index: 1; }
   .header__title--text {
+    display: inline-block;
     color: #ececeb;
     font-size: 2.2rem;
     font-family: "Montserrat", sans-serif;
@@ -370,9 +376,6 @@ noscript {
     text-align: center;
     white-space: normal;
     pointer-events: none; }
-    @media only screen and (max-width: 21.87em) {
-      .header__title--text {
-        font-size: 1.6rem; } }
     @media only screen and (min-width: 50em) {
       .header__title--text {
         font-size: 2.8rem; } }
@@ -452,12 +455,12 @@ noscript {
   align-content: center;
   transition: all .2s ease-in-out;
   position: sticky;
-  top: 0; }
+  top: 0;
+  padding: 0 4rem; }
   .nav__logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 4rem;
     color: #ECECEB; }
   .nav .logo__link {
     text-decoration: none;
@@ -468,7 +471,7 @@ noscript {
     min-width: 60%;
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-left: auto; }
     .nav__list .nav__item {
       flex: 1;
@@ -476,7 +479,7 @@ noscript {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 0 1rem; }
+      margin: 0 2rem; }
     .nav__list .nav__link {
       color: #ECECEB;
       text-decoration: none;
@@ -553,7 +556,7 @@ noscript {
   .nav__item.fade {
     opacity: 1; }
   .nav__link {
-    font-size: 2.8rem !important; }
+    font-size: 2.2rem !important; }
   .nav__item:nth-child(1) {
     transition: all 0.5s ease 0.2s; }
   .nav__item:nth-child(2) {
@@ -622,7 +625,7 @@ noscript {
   .card__image {
     flex: 1;
     background-size: cover;
-    background-position: center;
+    background-position: center right;
     background-blend-mode: screen;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     border-radius: 5px 5px 0 0; }
