--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -7,8 +7,8 @@
 
 .about-box {
     display: grid;
-    grid-template-rows: repeat(3, minmax(8.5rem, 15vw));
-    grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(8.5rem, 15vw)) minmax(1rem, 1fr);
+    grid-template-rows: repeat(3, minmax(9.5rem, 15vw));
+    grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(9.5rem, 15vw)) minmax(1rem, 1fr);
     gap: 4vw;
     justify-content: center;
     align-items: center;
@@ -57,7 +57,7 @@
             font-weight: 400;
             letter-spacing: 0;
             line-height: 1;
-            font-size: $font-mini;
+            font-size: $font-small;
             
             
             @media only screen and (min-width: $bp-small) {
