--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -24,9 +24,10 @@ noscript{
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-
-
+  
+  
   &--text {
+    display: inline-block;
     color: rgba($color-platinium, 1.0);
     font-size: $font-large;
     font-family: $font-tertiary;
@@ -38,9 +39,9 @@ noscript{
     pointer-events: none;
 
     
-    @media only screen and (max-width: $bp-mini) {
-      font-size: $font-med;
-    }
+    // @media only screen and (max-width: $bp-mini) {
+    //   font-size: $font-med;
+    // }
     
     
     @media only screen and (min-width: $bp-medium) {
