--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -136,12 +136,14 @@
 
     .nav__list {
         position: absolute;
+        top: 0;
+        right: 0;
         height: 100vh;
         width: 100%;
         flex-direction: column;
         // display: none;
         -webkit-clip-path: circle(30px at 95% -10%);
-        clip-path: circle(30px at 95% -10%);
+                clip-path: circle(30px at 95% -10%);
         transition: all .5s ease-in-out;
         pointer-events: none;
         background: rgba($color-indigo-dye-dark, .9);
@@ -154,8 +156,8 @@
     }
     
     .nav__list.open {
-        -webkit-clip-path: circle(150vh at 95% -10%);
-        clip-path: circle(150vh at 95% -10%);
+        -webkit-clip-path: circle(125vh at 95% -10%);
+                clip-path: circle(125vh at 95% -10%);
         pointer-events: all;
     }
     
