--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -8,13 +8,15 @@
     grid-template-columns: 1fr [mid-start] repeat(3,  1fr) [mid-end]  1fr;
     // grid-template-rows: repeat(2, minmax(min-content, max-content));
     grid-template-rows: repeat(2, max-content);
-    gap: 2rem;
+    // gap: 5rem;
+    // row-gap: 10rem;
     justify-items: center;
+    align-content: space-between;
     
 }
 
 .form-container {
-    margin: 5rem 0;
+    margin: 12vh 0 ;
     grid-row: 1/2;
     grid-column: mid-start / mid-end;
     position: relative;
@@ -161,7 +163,7 @@
 }
 
 .social {
-    grid-row: 2/-1;
+    grid-row: 2/-1; 
     grid-column: 1 / -1;
 
     background-color: $color-indigo-dye-dark;
@@ -171,7 +173,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-
+    padding: 3rem 0;
     &__icon-box {
         width: 30%;
         min-width: 27rem;
