--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -7,7 +7,7 @@
     &__container {
         // background: grey;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
         grid-auto-rows: 50rem;
         column-gap: 5rem;
         row-gap: 10rem;
@@ -100,8 +100,8 @@
         border-radius: 5px 5px 0 0;
 
         &--1 {
-            background-image: linear-gradient(to bottom, rgba($color-tangerine, .8) 0%, rgba($color-tangerine, .01) 10%, rgba(transparent, 0.0) 100%), url(../img/jpg/project.jpg);
-            background-image: url(../img/jpg/project.jpg);
+            background-image: linear-gradient(145deg, rgba($color-tangerine, .3) 0%,rgba($color-tangerine, .15) 25%, rgba($color-tangerine, 0.02) 100%), url(../img/jpg/project.jpg);
+            // background-image: url(../img/jpg/project.jpg);
         }
     }
 
@@ -155,13 +155,13 @@
             padding: 2rem 7%;
             font-family: $font-primary;
             color: $color-sonic-silver;
-            font-size: $font-med;
+            font-size: $font-small;
             font-weight: 400;
             margin: 1rem 0;
 
-            @media only screen and (max-width: $bp-small) {
-                font-size: $font-small;
-            }
+            // @media only screen and (max-width: $bp-small) {
+            //     font-size: $font-small;
+            // }
 
         }
 
