--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,11 +13,13 @@
   animation: change-color 4s linear infinite;
   // z-index: 1;
 }
+
 noscript{
   text-align: center;
   font-size: $font-huge;
   color: $color-tangerine;
 }
+
 .header__title {
   position: absolute;
   top: 50%;
@@ -39,11 +41,12 @@ noscript{
     pointer-events: none;
 
     
-    // @media only screen and (max-width: $bp-mini) {
-    //   font-size: $font-med;
-    // }
     
-    
+    @media only screen and (max-width: $bp-phone) {
+      font-size: 3rem;
+      
+    }
+
     @media only screen and (min-width: $bp-medium) {
       font-size: $font-big;
       
@@ -94,13 +97,14 @@ noscript{
   background: #111;
   width: 110px;
   height: 110px;
-
   margin: 2px;
   transition: 2s;
 
-  &:hover {
-    transition: 0s;
-    background: orangered;
+  @media only screen and (min-width: $bp-phone) {
+    &:hover {
+      transition: 0s;
+      background: orangered;
+    }
   }
 
   &:before {
