--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -139,7 +139,10 @@
             height: 100px;
             display: flex;
             align-items: center;
-            animation: slide-me 70s linear infinite;
+            @media only screen and (min-width: $bp-medium) {
+                animation: slide-me 70s linear infinite;
+
+            }
             &__icon{
                 fill: rgba($color-celeste, .8);
                 height: 3rem;
